# UEFI-For-OnePlus13R

./: README.md  setup_env.sh
Common/Mu/: Cargo.toml  Readme.rst
Common/Mu/.azurepipelines/: Ubuntu-GCC5.yml
Common/Mu/.pytool/: CISettings.py
Common/Mu/AdvLoggerPkg/: AdvLoggerPkg.dsc
Common/Mu/AdvLoggerPkg/AdvLoggerOsConnectorPrm/GoogleTest/: AdvLoggerOsConnectorPrmGoogleTest.cpp
Common/Mu/AdvLoggerPkg/Application/AdvancedLogDumper/: AdvancedLogDumper.inf  AdvancedLogDumperDynamicCommand.inf  LogDumper.c
Common/Mu/AdvLoggerPkg/Application/DecodeUefiLog/: DecodeUefiLog.py
Common/Mu/AdvLoggerPkg/Crates/RustAdvancedLoggerDxe/: Cargo.toml
Common/Mu/AdvLoggerPkg/Docs/: ReadMe.md
Common/Mu/AdvLoggerPkg/Include/: AdvancedLoggerInternal.h
Common/Mu/AdvLoggerPkg/Test/: AdvLoggerHostTest.dsc
Common/Mu/HidPkg/: HidPkg.ci.yaml
Common/Mu/HidPkg/HidKeyboardDxe/: HidKbDxe.h
Common/Mu/HidPkg/UefiHidDxeV2/: Cargo.toml
Common/Mu/HidPkg/UsbHidDxe/: UsbHidDxe.c
Common/Mu/MfciPkg/: MfciPkg.dsc
Common/Mu/MfciPkg/MfciDxe/: MfciDxe.c  MfciDxeRoT.c
Common/Mu/MfciPkg/UnitTests/: MfciPkgHostTest.dsc
Common/Mu/MsApplicationPkg/: MsApplicationPkg.dsc
Common/Mu/MsCorePkg/: MsCorePkg.ci.yaml  MsCorePkg.dsc
Common/Mu/MsGraphicsPkg/: MsGraphicsPkg.dsc
Common/Mu/MsGraphicsPkg/DisplayEngineDxe/: DisplayEngineDxe.inf
Common/Mu/MsGraphicsPkg/GopOverrideDxe/: GopOverrideDxe.c
Common/Mu/MsGraphicsPkg/OnScreenKeyboardDxe/: OnScreenKeyboardDriver.c
Common/Mu/MsGraphicsPkg/RenderingEngineDxe/: RenderingEngine.c
Common/Mu/MsGraphicsPkg/SimpleWindowManagerDxe/: WindowManager.c
Common/Mu/MsWheaPkg/: MsWheaPkg.ci.yaml
Common/Mu/TpmTestingPkg/: TpmTestingPkg.dsc
Common/Mu/TpmTestingPkg/TpmReplayPei/: TpmReplayTcg.c
Common/Mu/UefiTestingPkg/: UefiTestingPkg.ci.yaml  UefiTestingPkg.dec  UefiTestingPkg.dsc
(+494 files in other folders)
