[workspace]
resolver = "2"

# Add packages that generate binaries here
members = [
  "HidPkg/Crates/HidIo",
  "HidPkg/Crates/HiiKeyboardLayout",
  "HidPkg/UefiHidDxe",
  "HidPkg/UefiHidDxeV2",
  "MsWheaPkg/Crates/MuTelemetryHelperLib",
]

# Add packages that generate libraries here
[workspace.dependencies]
HidIo = { path = "HidPkg/Crates/HidIo" }
hidparser = { version = "1" }
HiiKeyboardLayout = { path = "HidPkg/Crates/HiiKeyboardLayout" }
memoffset = "0.9.0"
mockall = {version = "0.14.0"}
mu_pi = { version = "7" }
mu_rust_helpers = { version = "4" }
MuTelemetryHelperLib = { path = "MsWheaPkg/Crates/MuTelemetryHelperLib" }
num-derive = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
patina = { version = "22" }
r-efi = "^6"
RustAdvancedLoggerDxe = { path = "AdvLoggerPkg/Crates/RustAdvancedLoggerDxe" }
RustBootServicesAllocatorDxe = { path = "MsCorePkg/Crates/RustBootServicesAllocatorDxe" }
rustversion = "1.0.14"
scroll = { version = "0.13", default-features = false, features = ["derive"] }
spin = "0.10.0"
